<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greet">Trải nghiệm Awesome chat</string>
    <string name="login">Đăng nhập</string>
    <string name="email">EMAIL</string>
    <string name="yourname_gmail_com">yourname@gmail.com</string>
    <string name="hintPassword">********</string>
    <string name="password">MẬT KHẨU</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="name">HỌ VÀ TÊN</string>
    <string name="awesome_chat">Awesome Chat</string>
    <string name="terms_and_conditions">Tôi đồng ý với các chính sách và điều khoản</string>
    <string name="register">Đăng ký</string>
    <string name="back_to_login">Đã có tài khoản? Đăng nhập ngay</string>
    <string name="error_validate_email_password_field">Vui lòng nhập đúng định dạng email và mật khẩu</string>
    <string name="failed_register_message">Đăng ký thất bại </string>
    <string name="failed_login_message">Đăng nhập thất bại</string>
</resources>