<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_layout_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvIconApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_app" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGreet"
                style="@style/AppText.Exo.Light.26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greet"
                android:textColor="@color/text_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imvIconApp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleLogin"
                style="@style/AppText.Exo.Black.32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/login"
                android:textColor="@color/text_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGreet" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleEmail"
                style="@style/AppText.Lato.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/email"
                android:textColor="@color/text_gray_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                style="@style/AppText.Lato.Medium.18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/text_secondary"
                android:ems="10"
                android:hint="@string/yourname_gmail_com"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleEmail" />

            <View
                android:id="@+id/divideEmail"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_divide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitlePassword"
                style="@style/AppText.Lato.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/password"
                android:textColor="@color/text_gray_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divideEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                style="@style/AppText.Lato.Medium.18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_password_edt"
                android:drawableTint="@color/text_secondary"
                android:ems="10"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitlePassword" />

            <View
                android:id="@+id/dividePassword"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_divide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                style="@style/AppText.Lato.Bold.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/text_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividePassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLogin"
                style="@style/AppText.Lato.Bold.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/bg_button_login"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="@string/login"
                android:textColor="@color/text_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegister"
                style="@style/AppText.Lato.Regular.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>