<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_backward_arrow"
                android:tint="@color/primary_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleRegister"
                style="@style/AppText.Exo.Black.32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/register"
                android:textColor="@color/primary_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnBack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleName"
                style="@style/AppText.Lato.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/title_username"
                android:textColor="@color/text_gray_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleRegister" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtName"
                style="@style/AppText.Lato.Medium.18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_user"
                android:drawableTint="@color/text_secondary"
                android:ems="10"
                android:hint="@string/awesome_chat"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleName" />

            <View
                android:id="@+id/divideName"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_divide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleEmail"
                style="@style/AppText.Lato.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/email"
                android:textColor="@color/text_gray_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divideName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                style="@style/AppText.Lato.Medium.18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/text_secondary"
                android:ems="10"
                android:hint="@string/yourname_gmail_com"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleEmail" />

            <View
                android:id="@+id/divideEmail"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_divide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitlePassword"
                style="@style/AppText.Lato.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/password"
                android:textColor="@color/text_gray_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divideEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                style="@style/AppText.Lato.Medium.18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_password_edt"
                android:drawableTint="@color/text_secondary"
                android:ems="10"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitlePassword" />

            <View
                android:id="@+id/dividePassword"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_divide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/btnCheckBox"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_checkbox"
                android:button="@null"
                android:checked="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividePassword" />

            <TextView
                android:id="@+id/tvTermsAndConditions"
                style="@style/AppText.Lato.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/terms_and_conditions"
                app:layout_constraintBottom_toBottomOf="@id/btnCheckBox"
                app:layout_constraintStart_toEndOf="@id/btnCheckBox"
                app:layout_constraintTop_toTopOf="@id/btnCheckBox" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnRegister"
                style="@style/AppText.Lato.Bold.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/bg_button_login"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="@string/register"
                android:textColor="@color/text_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTermsAndConditions" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBackLogin"
                style="@style/AppText.Lato.Regular.14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/back_to_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>